removed contracts and abi
