# src/account/controller/account.controller.ts
@@ -1,14 +1,14 @@
-import { Controller, Post, Body } from '@nestjs/common';
-import { AccountService } from '../service/account.service';
-import { CreateAccountDto } from '../dto/account.dto';
+import { Controller } from '@nestjs/common';
+// import { AccountService } from '../service/account.service';
+// import { CreateAccountDto } from '../dto/account.dto';
 
 @Controller('account')
 export class AccountController {
-  constructor(private readonly accountService: AccountService) {}
-  @Post()
-  addAccount(
-    @Body() createAccountDto: CreateAccountDto,
-  ): Promise<CreateAccountDto> {
-    return this.accountService.create(createAccountDto);
-  }
+  // constructor(private readonly accountService: AccountService) {}
+  // @Post()
+  // addAccount(
+  //   @Body() createAccountDto: CreateAccountDto,
+  // ): Promise<CreateAccountDto> {
+  //   return this.accountService.create(createAccountDto);
+  // }
 }
